<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/view_drop_down_menu_icon_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_arrow_drop_down_white" />

    <LinearLayout
        android:id="@+id/view_drop_down_options_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/view_drop_down_menu_news_btn"
            style="@style/DropDownMenuItem"
            android:text="@string/news" />

        <View style="@style/DropDownMenuItemSeparator" />

        <Button
            android:id="@+id/view_drop_down_menu_scores_btn"
            style="@style/DropDownMenuItem"
            android:text="@string/scores" />

        <View style="@style/DropDownMenuItemSeparator" />

        <Button
            android:id="@+id/view_drop_down_menu_standings_btn"
            style="@style/DropDownMenuItem"
            android:text="@string/standings" />
    </LinearLayout>
</LinearLayout>